--- a/views/index.pug
+++ b/views/index.pug
@@ -7,4 +7,4 @@ block content
   button(id='btn' style={width: '84px',cursor: 'pointer'}) 
     span 按钮
 
-  script(src="/javascripts/index.js") 
+  script(src="./javascripts/index.js") 
